Navngivning av static-metoder for ProsessTaskData (#208)